<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_category"
        android:title="@string/category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_live"
        android:title="@string/live"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>
